--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^4.12.1",
+    "cypress-file-upload": "^5.0.8",
     "cypress-xpath": "^1.6.2"
   }
 }
